--- a/frontend/assets/scss/global.scss
+++ b/frontend/assets/scss/global.scss
@@ -1,4 +1,5 @@
 @use "reset";
+@import url(https://fonts.googleapis.com/css?family=Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
 * {
   &::-webkit-scrollbar {
@@ -8,17 +9,17 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: blue;
+    background-color: $accept;
     border-radius: 60px;
   }
 
   &::-webkit-scrollbar-track {
-    background: $bg_gray;
+    background: $black;
   }
 }
 
 body {
-  font-family: $ff_main, $ff_second, sans-serif;
+  font-family: "Raleway", $ff_main, $ff_second, sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 125%;
