--- a/frontend/assets/scss/_vars.scss
+++ b/frontend/assets/scss/_vars.scss
@@ -6,12 +6,13 @@ $ff_title: "Play Mtkadastr";
 
 $white: #fff;
 $black: #000;
-$accept: #e0bea2;
+$accent: #e0bea2;
 $txt: #252525;
 $error: #f00;
-$btn-accept-active: #cca88a;
-$btn-accept-hover-shadow: 0 5px 7px #25252532;
+$btn-accent-active: #cca88a;
+$btn-accent-hover-shadow: 0 5px 7px #25252532;
 
+$btn_radius: 10px;
 // Breakpoints
 $mobile: 375px;
 $tablet: 768px;
