added data in basket components

--- a/frontend/assets/scss/_mixins.scss
+++ b/frontend/assets/scss/_mixins.scss
@@ -41,6 +41,11 @@
   color: $color;
 }
 
+@mixin title_page($size: 20, $margin: 30) {
+  font-size: #{$size}px;
+  margin-block: #{$margin}px;
+}
+
 // @mixin link() {
 //   color: $txt_footer_link;
 //   transition: color $fast_ease;
