--- a/frontend/assets/scss/_vars.scss
+++ b/frontend/assets/scss/_vars.scss
@@ -7,6 +7,7 @@ $ff_title: "Play Mtkadastr";
 $white: #fff;
 $black: #000;
 $accent: #e0bea2;
+$accent-dark: #d38f56;
 $txt: #252525;
 $error: #f00;
 $btn-accent-active: #cca88a;
