--- a/frontend/assets/scss/global.scss
+++ b/frontend/assets/scss/global.scss
@@ -28,9 +28,24 @@ body {
   overflow-x: hidden;
   box-sizing: border-box;
 }
+
 .container {
-  margin: 0 auto;
+  margin-inline: auto;
+  padding-inline: 16px;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+
+  @include mediaTablet {
+    max-width: 768px;
+  }
+
+  @include mediaLaptop {
+    max-width: 1024px;
+  }
+
   @include mediaDesktop {
     max-width: 1400px;
+    padding-inline: 0;
   }
 }
