--- a/frontend/assets/scss/_vars.scss
+++ b/frontend/assets/scss/_vars.scss
@@ -13,6 +13,9 @@ $error: #f00;
 $btn-accent-active: #cca88a;
 $btn-accent-hover-shadow: 0 5px 7px #25252532;
 
+$default_cubic: cubic-bezier(0.4, 0, 0.2, 1);
+$default_transition: 0.3s $default_cubic;
+
 $btn_radius: 10px;
 // Breakpoints
 $mobile: 375px;
