--- a/frontend/assets/scss/_mixins.scss
+++ b/frontend/assets/scss/_mixins.scss
@@ -46,23 +46,6 @@
   margin-block: #{$margin}px;
 }
 
-// @mixin link() {
-//   color: $txt_footer_link;
-//   transition: color $fast_ease;
-
-//   &:hover {
-//     color: teal;
-//   }
-// }
-
-// @mixin header_link {
-//   transition: all $fast_ease;
-//   font-size: 15px;
-
-//   &:hover {
-//     opacity: 0.7;
-//   }
-// }
 
 @mixin btn_close_form {
   position: absolute;
@@ -87,4 +70,12 @@
   -webkit-line-clamp: $count;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+
+
+@mixin form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
