new pages by login and logout

--- a/frontend/assets/scss/_vars.scss
+++ b/frontend/assets/scss/_vars.scss
@@ -12,6 +12,7 @@ $txt: #252525;
 $error: #f00;
 $btn-accent-active: #cca88a;
 $btn-accent-hover-shadow: 0 5px 7px #25252532;
+$bg: #f5f5f5;
 
 $default_cubic: cubic-bezier(0.4, 0, 0.2, 1);
 $default_transition: 0.3s $default_cubic;
