new component by progress bar

--- a/frontend/assets/scss/global.scss
+++ b/frontend/assets/scss/global.scss
@@ -23,7 +23,7 @@ body {
   font-size: 16px;
   font-weight: 300;
   line-height: 125%;
-  background-color: $bg;
+  background-color: $white;
   color: $txt;
   overflow-x: hidden;
   box-sizing: border-box;
