--- a/frontend/assets/scss/_vars.scss
+++ b/frontend/assets/scss/_vars.scss
@@ -10,6 +10,7 @@ $accent: #e0bea2;
 $accent-dark: #d38f56;
 $txt: #252525;
 $error: #f00;
+$success: #0a7f41;
 $btn-accent-active: #cca88a;
 $btn-accent-hover-shadow: 0 5px 7px #25252532;
 $bg: #f5f5f5;
