--- a/frontend/assets/scss/global.scss
+++ b/frontend/assets/scss/global.scss
@@ -23,8 +23,10 @@ body {
   font-size: 16px;
   font-weight: 300;
   line-height: 125%;
-  background-color: $white;
-  color: $txt;
+  // background-color: $white;
+  // color: $txt;
+  background-color: var(--color-bg);
+  color: var(--color-text);
   overflow-x: hidden;
   box-sizing: border-box;
 }
