--- a/frontend/assets/scss/_vars.scss
+++ b/frontend/assets/scss/_vars.scss
@@ -33,7 +33,11 @@ $desktop: 1440px;
   --color-error: #f00;
   --color-success: #0a7f41;
   --color-white: #fff;
+  --color-white-light: #f5f5f5;
   --color-black: #000;
+  --color-section-title: var(--color-text);
+  --color-wysiwyg: #2e2e2e;
+  --color-header-link: var(--color-text);
 }
 
 [data-theme="dark"] {
@@ -43,4 +47,7 @@ $desktop: 1440px;
   --color-accent-dark: #a86e3f;
   --color-error: #ff6b6b;
   --color-success: #28a745;
+  --color-section-title: var(--color-accent);
+  --color-wysiwyg: var(--color-white-light);
+  --color-header-link: var(--color-white);
 }
