format: formatting code

--- a/frontend/assets/scss/_vars.scss
+++ b/frontend/assets/scss/_vars.scss
@@ -27,7 +27,7 @@ $laptop: 1024px;
 $desktop: 1440px;
 
 :root {
-  --color-bg: #f5f5f5;
+  --color-bg: #fff;
   --color-text: #252525;
   --color-accent: #e0bea2;
   --color-accent-dark: #d38f56;
