--- a/frontend/assets/scss/global.scss
+++ b/frontend/assets/scss/global.scss
@@ -25,7 +25,9 @@ body,
   height: 100%;
 }
 
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Raleway", $ff_main, $ff_second, sans-serif;
   font-size: 16px;
